@@ -23,6 +23,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-06-07 [B] Fixed pagination for user manager (thread ID 65365) {eenemeenemuu}
 2010-06-06 [O] Updated Finnish language file (user contribution) {eenemeenemuu}
 2010-06-04 [M] Release of cpg1.5.6 {GauGau}
 2010-06-04 [B] Fixed display of upload approval button (thread ID 65314) {eenemeenemuu}
